[package]
name = "bear_hole_server"
version = "0.1.0"
authors = ["Sycamoie <feixiongzixiaoyao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "1"
actix-web = "3"
actix-web-actors = "3"
serde = { version = "1", features = ["derive"] }
env_logger = "0.8"
log = "0.4"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }